--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -187,7 +187,7 @@
                   <div class="col1">
                      <h4 <% %> style="color: <%= data.Color %>;padding: 0; margin:0;">Important Note</h4>
                      
-                     <% if(data.welcomeNoteCompany.length !== 0){ data.welcomeNoteCompany.forEach(function (i, index) { %>
+                     <% if(data.welComeNoteShop.length !== 0){ data.welComeNoteShop.forEach(function (i, index) { %>
                      <p <% %>  style="font-size:<%= data.NoteFont %> ; line-height:<%= data.NoteLineSpace %>; padding: 0; margin:0;">
                         <%=index+1%>. <%=i.Content%>
                      </p>
