--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -426,42 +426,42 @@
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>header width</mat-label>
                                                                         <input matInput name="HeaderWidth"
-                                                                            [(ngModel)]="bill.HeaderWidth">
+                                                                         type="number" min="0"   [(ngModel)]="bill.HeaderWidth">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>header height</mat-label>
                                                                         <input matInput name="HeaderHeight"
-                                                                            [(ngModel)]="bill.HeaderHeight">
+                                                                        type="number" min="0"  [(ngModel)]="bill.HeaderHeight">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>header padding</mat-label>
                                                                         <input matInput name="HeaderPadding"
-                                                                            [(ngModel)]="bill.HeaderPadding">
+                                                                        type="number" min="0"   [(ngModel)]="bill.HeaderPadding">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>header margin</mat-label>
                                                                         <input matInput name="HeaderMargin"
-                                                                            [(ngModel)]="bill.HeaderMargin">
+                                                                        type="number" min="0"   [(ngModel)]="bill.HeaderMargin">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>image width</mat-label>
                                                                         <input matInput name="ImageWidth"
-                                                                            [(ngModel)]="bill.ImageWidth">
+                                                                        type="number" min="0"    [(ngModel)]="bill.ImageWidth">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>image height</mat-label>
                                                                         <input matInput name="ImageHeight"
-                                                                            [(ngModel)]="bill.ImageHeight">
+                                                                        type="number" min="0"    [(ngModel)]="bill.ImageHeight">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
@@ -479,14 +479,14 @@
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>ShopName Font</mat-label>
                                                                         <input matInput name="ShopNameFont"
-                                                                            [(ngModel)]="bill.ShopNameFont">
+                                                                        type="number" min="0"  [(ngModel)]="bill.ShopNameFont">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>ShopName Bold</mat-label>
                                                                         <input matInput name="ShopNameBold"
-                                                                            [(ngModel)]="bill.ShopNameBold">
+                                                                        type="number" min="0"    [(ngModel)]="bill.ShopNameBold">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
@@ -499,28 +499,28 @@
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>ShopDateil Font</mat-label>
-                                                                        <input matInput name="ShopDetailFont" [(ngModel)]="bill.ShopDetailFont"  >
+                                                                        <input matInput name="ShopDetailFont" type="number" min="0"  [(ngModel)]="bill.ShopDetailFont"  >
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>line spece </mat-label>
                                                                         <input matInput name="LineSpace"
-                                                                            [(ngModel)]="bill.LineSpace">
+                                                                        type="number" min="0"   [(ngModel)]="bill.LineSpace">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>Customer Font </mat-label>
                                                                         <input matInput name="CustomerFont"
-                                                                            [(ngModel)]="bill.CustomerFont">
+                                                                        type="number" min="0"   [(ngModel)]="bill.CustomerFont">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>Customer LineSpace </mat-label>
                                                                         <input matInput name="CustomerLineSpace"
-                                                                            [(ngModel)]="bill.CustomerLineSpace">
+                                                                        type="number" min="0"   [(ngModel)]="bill.CustomerLineSpace">
                                                                     </mat-form-field>
                                                                 </div>
 
@@ -528,28 +528,28 @@
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>table Heading</mat-label>
                                                                         <input matInput name="TableHeading"
-                                                                            [(ngModel)]="bill.TableHeading">
+                                                                        type="number" min="0"    [(ngModel)]="bill.TableHeading">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>table Body </mat-label>
                                                                         <input matInput name="TableBody"
-                                                                            [(ngModel)]="bill.TableBody ">
+                                                                        type="number" min="0"    [(ngModel)]="bill.TableBody ">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>Note Font </mat-label>
                                                                         <input matInput name="NoteFont "
-                                                                            [(ngModel)]="bill.NoteFont  ">
+                                                                        type="number" min="0"   [(ngModel)]="bill.NoteFont  ">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
                                                                     <mat-form-field class="example-full-width mb-0">
                                                                         <mat-label>Note LineSpace </mat-label>
                                                                         <input matInput name="NoteLineSpace"
-                                                                            [(ngModel)]="bill.NoteLineSpace ">
+                                                                        type="number" min="0"    [(ngModel)]="bill.NoteLineSpace ">
                                                                     </mat-form-field>
                                                                 </div>
                                                                 <div class="col-md-5 mb-0">
