--- a/web1/src/app/inventory/preorder-list/preorder-list.component.css
+++ b/web1/src/app/inventory/preorder-list/preorder-list.component.css
@@ -32,3 +32,8 @@
   cursor: pointer;
   box-shadow: 2px 2px 6px #9c9795fa;
 }
+
+button:disabled .delete_icon {
+  background-color: #bdbdbd;
+  color: #878787;
+}
