--- a/web1/src/app/inventory/preorder-list/preorder-list.component.html
+++ b/web1/src/app/inventory/preorder-list/preorder-list.component.html
@@ -6,7 +6,7 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-3 col-8 p-0 ms-3">
+                                <div class="col-xl-1 col-lg-2 col-md-3 col-8 p-0 ms-3">
                                     <h2>Order PriceList
                                         <!-- <button class="bg-btn" (click)="exportAsXLSX()">
                                             <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
@@ -80,7 +80,7 @@
                                                             <mat-icon class="edit_icon ms-1">edit
                                                             </mat-icon>
                                                         </button>
-                                                        <button *ngIf="deleteOrderPriceList" class="bg-btn" (click)="deleteItem(i)">
+                                                        <button [disabled]="data.SupplierName == 'PreOrder Supplier'" *ngIf="deleteOrderPriceList" class="bg-btn" (click)="deleteItem(i)">
                                                             <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
                                                         </button>
                                                     </td>
