--- a/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web1/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -133,6 +133,13 @@
                 </mat-error>
               </mat-form-field>
             </div>
+            <div class="col-xl-10 col-lg-10 col-md-8  col-sm-12 mb-0  mx-auto">
+              <mat-form-field class="example-full-width mb-0">
+                  <mat-label> CN Date </mat-label>
+                  <input matInput type="date" name="PurchaseDate " [(ngModel)]="PurchaseDate"
+                  required  >
+              </mat-form-field>
+          </div>
           </div>
         </div>
         <div class="modal-footer">
