--- a/web1/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web1/src/app/inventory/purchase-return/purchase-return.component.html
@@ -57,7 +57,7 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label> CN Date </mat-label>
                                         <input matInput type="date" name="PurchaseDate " [(ngModel)]="selectedPurchaseMaster.PurchaseDate"
-                                        required   autocomplete="off">
+                                        disabled  >
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-4 col-lg-2 col-md-0 col-sm-0 mb-0">
