--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -67,10 +67,10 @@
                                     <p class="text-center m-0">{{data.Email}}</p>
                                     <p class="text-center m-0 cardAddress">{{data.Address }}</p>
                                     <div class="text-center mb-3">
-                                        <button *ngIf="editSupplierList" class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
+                                        <button [disabled]="data.Name === 'PreOrder Supplier'" *ngIf="editSupplierList" class="bg-none" (click)="openModal(content)" (click)="getSupplierById(data)" [routerLink]="['/inventory/supplier']">
                                             <mat-icon class="edit_icon ms-1" data-mdb-toggle="modal" data-mdb-target="#exampleModal" > edit</mat-icon>
                                         </button>
-                                        <button *ngIf="deleteSupplierList" class="bg-none" (click)="deleteItem(i)">
+                                        <button [disabled]="data.Name === 'PreOrder Supplier'" *ngIf="deleteSupplierList" class="bg-none" (click)="deleteItem(i)">
                                             <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                         </button>
                                     </div>
