--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -171,6 +171,7 @@
             <div class="drop-content" id="collapseExample">
               <a *ngIf="viewFlag.viewInventoryExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/purchase']" id="collapseExample" >Inventory</a>
               <a *ngIf="viewFlag.viewCustomerExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/customer']" id="collapseExample" >Customer</a>
+              <a *ngIf="viewFlag.viewCustomerExcelImport" href="javascript:void(0)" [routerLink]="['/uploader/bill']" id="collapseExample" >Bill</a>
             </div>
           </div>
           <!-- companyadmin end Uploader -->
